--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "SET NODE_ENV=dev && nodemon index.js",
+    "test": "mocha || true"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,9 @@
     "qs": "^6.9.6",
     "redis": "^3.0.2",
     "translate": "^1.1.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1"
   }
 }
