--- a/package.json
+++ b/package.json
@@ -11,16 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "google-translate-api": "^2.3.0",
-    "google-translate-free": "^2.4.5",
-    "mongoose": "^5.11.12",
     "node-fetch": "^2.6.1",
     "qs": "^6.9.6",
-    "redis": "^3.0.2",
-    "translate": "^1.1.2"
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
